--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "test:integration": "mocha --recursive test/integration"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "serve-favicon": "^2.3.0",
-    "morgan": "^1.6.1",
-    "cookie-parser": "^1.3.3",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
-    "method-override": "^2.3.0",
+    "cookie-parser": "^1.3.3",
+    "ejs": "^2.3.1",
+    "express": "^4.13.3",
+    "express-session": "^1.15.6",
     "glob": "^6.0.4",
-    "sequelize": "^3.5.1",
+    "method-override": "^2.3.0",
+    "morgan": "^1.9.0",
     "mysql": "^2.8.0",
-    "ejs": "^2.3.1"
+    "sequelize": "^3.5.1",
+    "serve-favicon": "^2.3.0",
+    "util": "^0.10.3",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
