--- a/package.json
+++ b/package.json
@@ -1,54 +1,58 @@
 {
-  "name": "chatnode",
-  "version": "0.0.1",
-  "standard": {
-    "globals": [
-      "describe",
-      "context",
-      "before",
-      "beforeEach",
-      "after",
-      "afterEach",
-      "it",
-      "expect"
-    ]
-  },
-  "private": true,
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "test": "NODE_ENV=test mocha --recursive test && standard",
-    "test:coverage": "nyc npm test",
-    "test:unit": "mocha --recursive test/middleware test/models test/routes",
-    "test:integration": "mocha --recursive test/integration"
-  },
-  "dependencies": {
-    "body-parser": "^1.13.3",
-    "compression": "^1.5.2",
-    "cookie-parser": "^1.3.3",
-    "ejs": "^2.3.1",
-    "express": "^4.13.3",
-    "express-session": "^1.15.6",
-    "glob": "^6.0.4",
-    "method-override": "^2.3.0",
-    "morgan": "^1.9.0",
-    "mysql": "^2.8.0",
-    "sequelize": "^3.5.1",
-    "serve-favicon": "^2.3.0",
-    "util": "^0.10.3",
-    "utils": "^0.3.1"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "debug": "^2.2.0",
-    "grunt": "^1.0.1",
-    "grunt-develop": "^0.4.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "request": "^2.60.0",
-    "time-grunt": "^1.2.1",
-    "load-grunt-tasks": "^3.2.0",
-    "mocha": "^4.0.1",
-    "nyc": "^10.0.0",
-    "supertest": "^2.0.0"
+    "name": "chatnode",
+    "version": "0.0.1",
+    "standard": {
+      "globals": [
+        "describe",
+        "context",
+        "before",
+        "beforeEach",
+        "after",
+        "afterEach",
+        "it",
+        "expect"
+      ]
+    },
+    "private": true,
+    "main": "app.js",
+    "scripts": {
+      "start": "node app.js",
+      "test": "NODE_ENV=test mocha --recursive test && standard",
+      "test:coverage": "nyc npm test",
+      "test:unit": "mocha --recursive test/middleware test/models test/routes",
+      "test:integration": "mocha --recursive test/integration"
+    },
+    "dependencies": {
+      "body-parser": "^1.13.3",
+      "compression": "^1.5.2",
+      "cookie-parser": "^1.3.3",
+      "ejs": "^2.3.1",
+      "express": "^4.13.3",
+      "express-session": "^1.15.6",
+      "glob": "^6.0.4",
+      "method-override": "^2.3.0",
+      "morgan": "^1.9.0",
+      "mysql": "^2.8.0",
+      "sequelize": "^3.5.1",
+      "serve-favicon": "^2.3.0",
+      "util": "^0.10.3",
+      "utils": "^0.3.1",
+      "standard": "^11.0.1"
+      
+    
+    },
+    "devDependencies": {
+      "chai": "^3.5.0",
+      "debug": "^2.2.0",
+      "grunt": "^1.0.1",
+      "grunt-develop": "^0.4.0",
+      "grunt-contrib-watch": "^1.0.0",
+      "request": "^2.60.0",
+      "time-grunt": "^1.2.1",
+      "load-grunt-tasks": "^3.2.0",
+      "mocha": "^4.0.1",
+      "nyc": "^10.0.0",
+      "supertest": "^2.0.0"
+    }
   }
-}
+  
