--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "main": "app.js",
     "scripts": {
       "start": "node app.js",
-      "test": "NODE_ENV=test mocha --recursive test && standard",
+      "test": "mocha --recursive test && standard",
       "test:coverage": "nyc npm test",
       "test:unit": "mocha --recursive test/middleware test/models test/routes",
       "test:integration": "mocha --recursive test/integration"
